Sms service added

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -5,7 +5,12 @@
     "Issuer": "AtlasWebApi",
     "Audience": "AtlasWebApi",
     "TokenType": "Bearer",
-    "TokenHeader":  "Authorization"
+    "TokenHeader": "Authorization"
+  },
+  "SmsSettings": {
+    "AccountSid": "ACa2a6c8daad72a3bee8b95979f70046b8",
+    "AuthToken": "bc2ad7631bca1425396b9812f9373332",
+    "FromPhoneNumber": "+19893941192"
   },
   "Logging": {
     "LogLevel": {
