--- a/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
+++ b/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
@@ -30,10 +30,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+    <PackageReference Include="Twilio" Version="5.74.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Microsoft.EntityFrameworkCore" />
     <None Remove="Microsoft.EntityFrameworkCore.Relational" />
     <None Remove="Swashbuckle.AspNetCore" />
+    <None Remove="Twilio" />
   </ItemGroup>
 </Project>
