--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -41,6 +41,10 @@
     <Folder Include="CQRS\Orders\" />
     <Folder Include="CQRS\Orders\Commands\" />
     <Folder Include="CQRS\Orders\Queries\GetOrderDetails\" />
+    <Folder Include="CQRS\Notifications\" />
+    <Folder Include="CQRS\Notifications\Commands\" />
+    <Folder Include="CQRS\Notifications\Queries\" />
+    <Folder Include="CQRS\Notifications\Queries\GetNotificationsPagedListQuery\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -70,5 +74,9 @@
     <None Remove="CQRS\Orders\" />
     <None Remove="CQRS\Orders\Commands\" />
     <None Remove="CQRS\Orders\Queries\GetOrderByClient\" />
+    <None Remove="CQRS\Notifications\" />
+    <None Remove="CQRS\Notifications\Commands\" />
+    <None Remove="CQRS\Notifications\Queries\" />
+    <None Remove="CQRS\Notifications\Queries\GetNotificationsPagedListQuery\" />
   </ItemGroup>
 </Project>
