--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -50,6 +50,7 @@
     <Folder Include="CQRS\Clients\" />
     <Folder Include="CQRS\Clients\Queries\" />
     <Folder Include="CQRS\Clients\Queries\GetClientDetails\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -90,5 +91,6 @@
     <None Remove="CQRS\Clients\" />
     <None Remove="CQRS\Clients\Queries\" />
     <None Remove="CQRS\Clients\Queries\GetClientDetails\" />
+    <None Remove="Enums\" />
   </ItemGroup>
 </Project>
