--- a/Atlas.Presentation/Atlas.WebApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DbConnection": "User ID=postgres;Password=20phoenix02;Host=localhost;Port=5432;Database=Atlas;SearchPath=public",
+  "DbConnection": "User ID=dominikgaliev;Password=123;Host=localhost;Port=5432;Database=Atlas;SearchPath=public",
   "TokenGenerationSettings": {
     "Secret": "P4R4N01d_s3CR3T_k3y_0H_MY_60D_Y3AH_MLG_1_DON7_Kn0w_EV3N_Wh4t_!_C4N_DO_WITH_IT_I_GOT_IT",
     "Issuer": "AtlasWebApi",
