--- a/Atlas.Presentation/Atlas.WebApi/Atlas.WebApi.csproj
+++ b/Atlas.Presentation/Atlas.WebApi/Atlas.WebApi.csproj
@@ -24,6 +24,7 @@
     <Folder Include="Middlewares\" />
     <Folder Include="Extensions\" />
     <Folder Include="Filters\" />
+    <Folder Include="uploads\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Atlas.Identity\Startup.cs" />
@@ -49,6 +50,7 @@
     <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <None Remove="Microsoft.AspNetCore.Mvc.Versioning" />
     <None Remove="Filters\" />
+    <None Remove="uploads\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Atlas.Application\Atlas.Application.csproj">
