Create order functionality added

--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -88,6 +88,11 @@
     <Folder Include="CQRS\PageVisits\Commands\IncrementPageVisit\" />
     <Folder Include="CQRS\PageVisits\Queries\" />
     <Folder Include="CQRS\PageVisits\Queries\GetPagesVisits\" />
+    <Folder Include="CQRS\Orders\Commands\CreateOrder\" />
+    <Folder Include="CQRS\GoodToOrders\" />
+    <Folder Include="CQRS\GoodToOrders\Commands\" />
+    <Folder Include="CQRS\GoodToOrders\Commands\CreateGoodToOrder\" />
+    <Folder Include="Common\Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -166,5 +171,10 @@
     <None Remove="CQRS\PageVisits\Commands\IncrementPageVisit\" />
     <None Remove="CQRS\PageVisits\Queries\" />
     <None Remove="CQRS\PageVisits\Queries\GetPagesVisits\" />
+    <None Remove="CQRS\Orders\Commands\CreateOrder\" />
+    <None Remove="CQRS\GoodToOrders\" />
+    <None Remove="CQRS\GoodToOrders\Commands\" />
+    <None Remove="CQRS\GoodToOrders\Commands\CreateGoodToOrder\" />
+    <None Remove="Common\Helpers\" />
   </ItemGroup>
 </Project>
