--- a/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
+++ b/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -38,4 +38,8 @@
     <None Remove="Swashbuckle.AspNetCore" />
     <None Remove="Twilio" />
   </ItemGroup>
+<PropertyGroup>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
+</PropertyGroup>
 </Project>
