--- a/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
+++ b/Atlas.Presentation/Atlas.Identity/Atlas.Identity.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\net5.0\Atlas.Identity.xml</DocumentationFile>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Atlas.Application\Atlas.Application.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
@@ -23,6 +27,7 @@
     <Folder Include="Constants\" />
     <Folder Include="Settings\" />
     <Folder Include="Services\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
@@ -37,5 +42,6 @@
     <None Remove="Microsoft.EntityFrameworkCore.Relational" />
     <None Remove="Swashbuckle.AspNetCore" />
     <None Remove="Twilio" />
+    <None Remove="Extensions\" />
   </ItemGroup>
 </Project>
