Goods count added

--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -106,6 +106,7 @@
     <Folder Include="CQRS\SupplyManagers\Commands\UpdateSupplyManagersStoreId\" />
     <Folder Include="CQRS\Couriers\Commands\UpdateCouriersStoreId\" />
     <Folder Include="CQRS\Goods\Queries\GetGoodPagedList\" />
+    <Folder Include="CQRS\Goods\Queries\GetGoodCounts\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -203,5 +204,6 @@
     <None Remove="CQRS\SupplyManagers\Commands\UpdateSupplyManagersStoreId\" />
     <None Remove="CQRS\Couriers\Commands\UpdateCouriersStoreId\" />
     <None Remove="CQRS\Goods\Queries\GetGoodPagedList\" />
+    <None Remove="CQRS\Goods\Queries\GetGoodCounts\" />
   </ItemGroup>
 </Project>
