Neo4j connection added

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -1,5 +1,10 @@
 {
   "DbConnection": "User ID=dominikgaliev;Password=123;Host=localhost;Port=5432;Database=AtlasV2;SearchPath=public",
+  "Neo4j": {
+    "ConnectionString": "neo4j://localhost:7687",
+    "Login": "neo4j",
+    "Password": "neo4j"
+  },
   "TokenGenerationSettings": {
     "Secret": "P4R4N01d_s3CR3T_k3y_0H_MY_60D_Y3AH_MLG_1_DON7_Kn0w_EV3N_Wh4t_!_C4N_DO_WITH_IT_I_GOT_IT",
     "Issuer": "AtlasWebApi",
