--- a/Atlas.Infrastructure/Atlas.Persistence.csproj
+++ b/Atlas.Infrastructure/Atlas.Persistence.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="Neo4j.Driver" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="EntityTypeConfigurations\" />
@@ -18,5 +19,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Atlas.Domain\Atlas.Domain.csproj" />
     <ProjectReference Include="..\Atlas.Application\Atlas.Application.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Neo4j.Driver" />
   </ItemGroup>
 </Project>
