--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -5,6 +5,9 @@
     "Login": "neo4j",
     "Password": "123"
   },
+  "InfluxDb": {
+    "Token": "Your_Token_Goes_Here"
+  },
   "TokenGenerationSettings": {
     "Secret": "P4R4N01d_s3CR3T_k3y_0H_MY_60D_Y3AH_MLG_1_DON7_Kn0w_EV3N_Wh4t_!_C4N_DO_WITH_IT_I_GOT_IT",
     "Issuer": "AtlasWebApi",
