Influx metrics added

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -6,7 +6,7 @@
     "Password": "123"
   },
   "InfluxDb": {
-    "Token": "Your_Token_Goes_Here"
+    "Token": "T1_7V697XeG2gYT_RXcxn2i6ZcquzbGjW-U1ngTrj3QjCxDh99ckz5JkAH3JztR-Mi2gFNIk-UvFK3m5rytsuA=="
   },
   "TokenGenerationSettings": {
     "Secret": "P4R4N01d_s3CR3T_k3y_0H_MY_60D_Y3AH_MLG_1_DON7_Kn0w_EV3N_Wh4t_!_C4N_DO_WITH_IT_I_GOT_IT",
