--- a/Atlas.Presentation/Atlas.WebApi/Atlas.WebApi.csproj
+++ b/Atlas.Presentation/Atlas.WebApi/Atlas.WebApi.csproj
@@ -19,12 +19,17 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.27" />
+    <PackageReference Include="Coravel" Version="4.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Middlewares\" />
     <Folder Include="Extensions\" />
     <Folder Include="Filters\" />
     <Folder Include="uploads\" />
+    <Folder Include="Observers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Atlas.Identity\Startup.cs" />
@@ -51,6 +56,11 @@
     <None Remove="Microsoft.AspNetCore.Mvc.Versioning" />
     <None Remove="Filters\" />
     <None Remove="uploads\" />
+    <None Remove="System.Diagnostics.DiagnosticSource" />
+    <None Remove="Microsoft.Extensions.DiagnosticAdapter" />
+    <None Remove="Observers\" />
+    <None Remove="Services\" />
+    <None Remove="Coravel" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Atlas.Application\Atlas.Application.csproj">
