Fixed some bugs in Category's logic

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -3,7 +3,7 @@
   "Neo4j": {
     "ConnectionString": "neo4j://localhost:7687",
     "Login": "neo4j",
-    "Password": "123"
+    "Password": "20phoenix02"
   },
   "InfluxDb": {
     "Token": "T1_7V697XeG2gYT_RXcxn2i6ZcquzbGjW-U1ngTrj3QjCxDh99ckz5JkAH3JztR-Mi2gFNIk-UvFK3m5rytsuA=="
