--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -119,6 +119,9 @@
     <Folder Include="CQRS\Orders\Queries\GetLastOrdersPagedListByAdmin\" />
     <Folder Include="CQRS\Orders\Queries\GetLastOrdersPagedListByStore\" />
     <Folder Include="CQRS\ProviderPhoneNumbers\Commands\CreateProviderPhoneNumbers\" />
+    <Folder Include="CQRS\OfficialRoles\" />
+    <Folder Include="CQRS\OfficialRoles\Queries\" />
+    <Folder Include="CQRS\OfficialRoles\Queries\GetOfficialRolesListQuery\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -237,5 +240,8 @@
     <None Remove="CQRS\Orders\Queries\GetLastOrdersPagedListByAdmin\" />
     <None Remove="CQRS\Orders\Queries\GetLastOrdersPagedListByStore\" />
     <None Remove="CQRS\ProviderPhoneNumbers\Commands\CreateProviderPhoneNumbers\" />
+    <None Remove="CQRS\OfficialRoles\" />
+    <None Remove="CQRS\OfficialRoles\Queries\" />
+    <None Remove="CQRS\OfficialRoles\Queries\GetOfficialRolesListQuery\" />
   </ItemGroup>
 </Project>
