Goods statistics added

--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -124,6 +124,7 @@
     <Folder Include="CQRS\OfficialRoles\Queries\GetOfficialRolesListQuery\" />
     <Folder Include="CQRS\Goods\Queries\GetTopGoods\" />
     <Folder Include="CQRS\Goods\Queries\GetGoodsForMainCategories\" />
+    <Folder Include="CQRS\Statistics\Queries\GetGoodsCountStatistics\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -247,5 +248,6 @@
     <None Remove="CQRS\OfficialRoles\Queries\GetOfficialRolesListQuery\" />
     <None Remove="CQRS\Goods\Queries\GetTopGoods\" />
     <None Remove="CQRS\Goods\Queries\GetGoodsForMainCategories\" />
+    <None Remove="CQRS\Statistics\Queries\GetGoodsCountStatistics\" />
   </ItemGroup>
 </Project>
