--- a/Atlas.Presentation/Atlas.WebApi/Atlas.WebApi.csproj
+++ b/Atlas.Presentation/Atlas.WebApi/Atlas.WebApi.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.27" />
     <PackageReference Include="Coravel" Version="4.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="SignalRSwaggerGen" Version="3.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Middlewares\" />
@@ -30,6 +32,8 @@
     <Folder Include="uploads\" />
     <Folder Include="Observers\" />
     <Folder Include="Services\" />
+    <Folder Include="Hubs\" />
+    <Folder Include="Hubs\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Atlas.Identity\Startup.cs" />
@@ -61,6 +65,10 @@
     <None Remove="Observers\" />
     <None Remove="Services\" />
     <None Remove="Coravel" />
+    <None Remove="Hubs\" />
+    <None Remove="Microsoft.AspNetCore.SignalR" />
+    <None Remove="Hubs\Models\" />
+    <None Remove="SignalRSwaggerGen" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Atlas.Application\Atlas.Application.csproj">
