--- a/Atlas.Presentation/Atlas.WebApi/appsettings.json
+++ b/Atlas.Presentation/Atlas.WebApi/appsettings.json
@@ -1,9 +1,9 @@
 {
   "DbConnection": "User ID=postgres;Password=20phoenix02;Host=localhost;Port=5432;Database=Atlas;SearchPath=public",
   "Neo4j": {
-    "ConnectionString": "neo4j://localhost:7687",
+    "ConnectionString": "neo4j://windlace.uz:7687",
     "Login": "neo4j",
-    "Password": "20phoenix02"
+    "Password": "oqotwindlace123"
   },
   "InfluxDb": {
     "Token": "T1_7V697XeG2gYT_RXcxn2i6ZcquzbGjW-U1ngTrj3QjCxDh99ckz5JkAH3JztR-Mi2gFNIk-UvFK3m5rytsuA=="
