Hub onConnect method changed v9

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DbConnection": "User ID=postgres;Password=20phoenix02;Host=localhost;Port=5432;Database=Atlas;SearchPath=public",
+  "DbConnection": "User ID=dominikgaliev;Password=123;Host=localhost;Port=5432;Database=Atlas;SearchPath=public",
   "Neo4j": {
     "ConnectionString": "neo4j://localhost:7687",
     "Login": "neo4j",
