--- a/Atlas.Application/Atlas.Application.csproj
+++ b/Atlas.Application/Atlas.Application.csproj
@@ -132,6 +132,7 @@
     <Folder Include="CQRS\Providers\Commands\RestoreProvider\" />
     <Folder Include="CQRS\CategoryToGoods\Commands\CreateCategoriesToGood\" />
     <Folder Include="CQRS\Clients\Queries\GetClientsList\" />
+    <Folder Include="CQRS\Orders\Commands\UpdateOrder\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
@@ -268,5 +269,6 @@
     <None Remove="CQRS\Providers\Commands\RestoreProvider\" />
     <None Remove="CQRS\CategoryToGoods\Commands\CreateCategoriesToGood\" />
     <None Remove="CQRS\Clients\Queries\GetClientsList\" />
+    <None Remove="CQRS\Orders\Commands\UpdateOrder\" />
   </ItemGroup>
 </Project>
