Sms sender-id added

--- a/Atlas.Presentation/Atlas.Identity/appsettings.json
+++ b/Atlas.Presentation/Atlas.Identity/appsettings.json
@@ -18,7 +18,8 @@
   "SmsSettings": {
     "AccountSid": "ACa2a6c8daad72a3bee8b95979f70046b8",
     "AuthToken": "bc2ad7631bca1425396b9812f9373332",
-    "FromPhoneNumber": "+19893941192"
+    "FromPhoneNumber": "OQ OT",
+    "MessagingServiceSid": "MGa96e06395f7b9d4327cd11293e525591"
   },
   "Logging": {
     "LogLevel": {
